# Fast_zero_sync

./: .gitignore  pyproject.toml
fast_zero/: app.py  models.py  security.py  settings.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 0cd7f391b8bc_create_users_table.py  4e5dbff68f0b_exercicio_02_aula_04.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
